--- a/make_workfile.ipynb
+++ b/make_workfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,16 +151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_temp = df.iloc[26:51].copy()"
+    "df_temp = df.iloc[86:119].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -189,139 +189,174 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>gaming</td>\n",
+       "      <th>86</th>\n",
+       "      <td>LSAT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>The_Mueller</td>\n",
+       "      <th>87</th>\n",
+       "      <td>morbidquestions</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>BlackPeopleTwitter</td>\n",
+       "      <th>88</th>\n",
+       "      <td>EverythingScience</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>WTF</td>\n",
+       "      <th>89</th>\n",
+       "      <td>space</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>LifeProTips</td>\n",
+       "      <th>90</th>\n",
+       "      <td>IRstudies</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>ShittyLifeProTips</td>\n",
+       "      <th>91</th>\n",
+       "      <td>dirtykikpals</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>CrazyIdeas</td>\n",
+       "      <th>92</th>\n",
+       "      <td>BlueMidterm2018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>leagueoflegends</td>\n",
+       "      <th>93</th>\n",
+       "      <td>Juve</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>DoesAnybodyElse</td>\n",
+       "      <th>94</th>\n",
+       "      <td>IndianFootball</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>relationships</td>\n",
+       "      <th>95</th>\n",
+       "      <td>LiverpoolFC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>Advice</td>\n",
+       "      <th>96</th>\n",
+       "      <td>reddevils</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>sex</td>\n",
+       "      <th>97</th>\n",
+       "      <td>gadgets</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>SuicideWatch</td>\n",
+       "      <th>98</th>\n",
+       "      <td>privacy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>AskWomen</td>\n",
+       "      <th>99</th>\n",
+       "      <td>de</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>AskEurope</td>\n",
+       "      <th>100</th>\n",
+       "      <td>web_design</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>ukpolitics</td>\n",
+       "      <th>101</th>\n",
+       "      <td>RandomThoughts</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>Romania</td>\n",
+       "      <th>102</th>\n",
+       "      <td>streetwear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>travel</td>\n",
+       "      <th>103</th>\n",
+       "      <td>Fireteams</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>europeanunion</td>\n",
+       "      <th>104</th>\n",
+       "      <td>OrlandoMagic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>Drugs</td>\n",
+       "      <th>105</th>\n",
+       "      <td>tmobile</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>DotA2</td>\n",
+       "      <th>106</th>\n",
+       "      <td>DnD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>legaladvice</td>\n",
+       "      <th>107</th>\n",
+       "      <td>answers</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>AskHistorians</td>\n",
+       "      <th>108</th>\n",
+       "      <td>opennmsCircleofTrust</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>personalfinance</td>\n",
+       "      <th>109</th>\n",
+       "      <td>youtubehaiku</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>aww</td>\n",
+       "      <th>110</th>\n",
+       "      <td>youtube</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>copypasta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>gifs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>NYYankees</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>mlb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>redsox</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>dataisbeautiful</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>Broadway</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              sub_name\n",
-       "26              gaming\n",
-       "27         The_Mueller\n",
-       "28  BlackPeopleTwitter\n",
-       "29                 WTF\n",
-       "30         LifeProTips\n",
-       "31   ShittyLifeProTips\n",
-       "32          CrazyIdeas\n",
-       "33     leagueoflegends\n",
-       "34     DoesAnybodyElse\n",
-       "35       relationships\n",
-       "36              Advice\n",
-       "37                 sex\n",
-       "38        SuicideWatch\n",
-       "39            AskWomen\n",
-       "40           AskEurope\n",
-       "41          ukpolitics\n",
-       "42             Romania\n",
-       "43              travel\n",
-       "44       europeanunion\n",
-       "45               Drugs\n",
-       "46               DotA2\n",
-       "47         legaladvice\n",
-       "48       AskHistorians\n",
-       "49     personalfinance\n",
-       "50                 aww"
+       "                 sub_name\n",
+       "86                   LSAT\n",
+       "87        morbidquestions\n",
+       "88      EverythingScience\n",
+       "89                  space\n",
+       "90              IRstudies\n",
+       "91           dirtykikpals\n",
+       "92        BlueMidterm2018\n",
+       "93                   Juve\n",
+       "94         IndianFootball\n",
+       "95            LiverpoolFC\n",
+       "96              reddevils\n",
+       "97                gadgets\n",
+       "98                privacy\n",
+       "99                     de\n",
+       "100            web_design\n",
+       "101        RandomThoughts\n",
+       "102            streetwear\n",
+       "103             Fireteams\n",
+       "104          OrlandoMagic\n",
+       "105               tmobile\n",
+       "106                   DnD\n",
+       "107               answers\n",
+       "108  opennmsCircleofTrust\n",
+       "109          youtubehaiku\n",
+       "110               youtube\n",
+       "111             copypasta\n",
+       "112                  gifs\n",
+       "113             NYYankees\n",
+       "114                   mlb\n",
+       "115                redsox\n",
+       "116       dataisbeautiful\n",
+       "117              Broadway"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
