--- a/Dbase_maker.ipynb
+++ b/Dbase_maker.ipynb
@@ -347,16 +347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(columns=['subreddits','og_subreddit'])"
+    "df = pd.DataFrame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "0"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,53 +376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 145,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "for i in onlyfiles:\n",
+    "    i='The_Donald_posters_lst.csv'\n",
+    "    tmp = re.findall(str_srch,i)[0]\n",
+    "    #tmp\n",
     "    temp = pd.read_csv('./data/posters/{}'.format(i))\n",
-    "    temp['og_subreddit'] = re.findall(str_srch,i)[0]\n",
-    "    if df.shape[0] == 0:\n",
-    "        df = temp.copy()\n",
-    "    else:\n",
-    "        df=pd.concat([df,temp])\n"
+    "    temp.columns=[tmp]\n",
+    "    temp=pd.DataFrame(temp[tmp].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(379826, 2)"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('./data/final_db.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -446,26 +414,303 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>b_subreddit</th>\n",
-       "      <th>p_subreddit</th>\n",
+       "      <th>The_Donald</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>r/The_Donald</th>\n",
+       "      <td>944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r/AskReddit</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r/yankees</th>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r/opieandanthony</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r/news</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [b_subreddit, p_subreddit]\n",
-       "Index: []"
+       "                  The_Donald\n",
+       "r/The_Donald             944\n",
+       "r/AskReddit               17\n",
+       "r/yankees                 15\n",
+       "r/opieandanthony           8\n",
+       "r/news                     8"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "temp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/steven/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:12: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  if sys.path[0] == '':\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in onlyfiles:\n",
+    "#i='The_Donald_posters_lst.csv'\n",
+    "    tmp = re.findall(str_srch,i)[0]\n",
+    "    #tmp\n",
+    "    temp = pd.read_csv('./data/posters/{}'.format(i))\n",
+    "    temp.columns=[tmp]\n",
+    "    temp=pd.DataFrame(temp[tmp].value_counts())\n",
+    "    #temp\n",
+    "    if df.shape[0] == 0:\n",
+    "        df = temp.copy()\n",
+    "    else:\n",
+    "        df=pd.concat([df,temp],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.fillna(0,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 20832 entries, 0ad to zyramains\n",
+      "Data columns (total 138 columns):\n",
+      "morbidquestions        20832 non-null float64\n",
+      "gadgets                20832 non-null float64\n",
+      "dirtykikpals           20832 non-null float64\n",
+      "PoliticalHumor         20832 non-null float64\n",
+      "funny                  20832 non-null float64\n",
+      "WTF                    20832 non-null float64\n",
+      "europeanunion          20832 non-null float64\n",
+      "answers                20832 non-null float64\n",
+      "florida                20832 non-null float64\n",
+      "healthcare             20832 non-null float64\n",
+      "newzealand             20832 non-null float64\n",
+      "The_Donald             20832 non-null float64\n",
+      "reddevils              20832 non-null float64\n",
+      "fantasyfootball        20832 non-null float64\n",
+      "The_Mueller            20832 non-null float64\n",
+      "movies                 20832 non-null float64\n",
+      "Juve                   20832 non-null float64\n",
+      "AskHistorians          20832 non-null float64\n",
+      "OrlandoMagic           20832 non-null float64\n",
+      "hiphopheads            20832 non-null float64\n",
+      "NoStupidQuestions      20832 non-null float64\n",
+      "quotes                 20832 non-null float64\n",
+      "nfl                    20832 non-null float64\n",
+      "television             20832 non-null float64\n",
+      "dadjokes               20832 non-null float64\n",
+      "gaming                 20832 non-null float64\n",
+      "AskOuija               20832 non-null float64\n",
+      "pics                   20832 non-null float64\n",
+      "Romania                20832 non-null float64\n",
+      "CrazyIdeas             20832 non-null float64\n",
+      "teenagers              20832 non-null float64\n",
+      "nottheonion            20832 non-null float64\n",
+      "hiphop                 20832 non-null float64\n",
+      "legaladvice            20832 non-null float64\n",
+      "NBAlive                20832 non-null float64\n",
+      "DnD                    20832 non-null float64\n",
+      "bakchodi               20832 non-null float64\n",
+      "de                     20832 non-null float64\n",
+      "soccer                 20832 non-null float64\n",
+      "GameLive_0n            20832 non-null float64\n",
+      "nba                    20832 non-null float64\n",
+      "personalfinance        20832 non-null float64\n",
+      "LiverpoolFC            20832 non-null float64\n",
+      "unpopularopinion       20832 non-null float64\n",
+      "smashbros              20832 non-null float64\n",
+      "yankees                20832 non-null float64\n",
+      "SandersForPresident    20832 non-null float64\n",
+      "listentothis           20832 non-null float64\n",
+      "Music                  20832 non-null float64\n",
+      "worldnews              20832 non-null float64\n",
+      "politics               20832 non-null float64\n",
+      "FortNiteBR             20832 non-null float64\n",
+      "RandomThoughts         20832 non-null float64\n",
+      "u_Autotradenews        20832 non-null float64\n",
+      "space                  20832 non-null float64\n",
+      "BlueMidterm2018        20832 non-null float64\n",
+      "DunkNation3x3          20832 non-null float64\n",
+      "NBA2k                  20832 non-null float64\n",
+      "SquaredCircle          20832 non-null float64\n",
+      "IRstudies              20832 non-null float64\n",
+      "technology             20832 non-null float64\n",
+      "tmobile                20832 non-null float64\n",
+      "Boxing                 20832 non-null float64\n",
+      "leagueoflegends        20832 non-null float64\n",
+      "mildlyinteresting      20832 non-null float64\n",
+      "relationships          20832 non-null float64\n",
+      "LifeProTips            20832 non-null float64\n",
+      "Kanye                  20832 non-null float64\n",
+      "WritingPrompts         20832 non-null float64\n",
+      "todayilearned          20832 non-null float64\n",
+      "AskWomen               20832 non-null float64\n",
+      "Psychonaut             20832 non-null float64\n",
+      "Eminem                 20832 non-null float64\n",
+      "privacy                20832 non-null float64\n",
+      "hmmm                   20832 non-null float64\n",
+      "videos                 20832 non-null float64\n",
+      "Futurology             20832 non-null float64\n",
+      "explainlikeimfive      20832 non-null float64\n",
+      "AskReddit              20832 non-null float64\n",
+      "LSAT                   20832 non-null float64\n",
+      "DotA2                  20832 non-null float64\n",
+      "apple                  20832 non-null float64\n",
+      "Health                 20832 non-null float64\n",
+      "marvelstudios          20832 non-null float64\n",
+      "TooAfraidToAsk         20832 non-null float64\n",
+      "AskEurope              20832 non-null float64\n",
+      "tech                   20832 non-null float64\n",
+      "lakers                 20832 non-null float64\n",
+      "tipofmytongue          20832 non-null float64\n",
+      "opieandanthony         20832 non-null float64\n",
+      "oneliners              20832 non-null float64\n",
+      "dankmemes              20832 non-null float64\n",
+      "AntiJokes              20832 non-null float64\n",
+      "sex                    20832 non-null float64\n",
+      "streetwear             20832 non-null float64\n",
+      "travel                 20832 non-null float64\n",
+      "timberwolves           20832 non-null float64\n",
+      "MaddenUltimateTeam     20832 non-null float64\n",
+      "findareddit            20832 non-null float64\n",
+      "Android                20832 non-null float64\n",
+      "darkjokes              20832 non-null float64\n",
+      "stalker                20832 non-null float64\n",
+      "shittyaskscience       20832 non-null float64\n",
+      "baseball               20832 non-null float64\n",
+      "FIFA                   20832 non-null float64\n",
+      "DoesAnybodyElse        20832 non-null float64\n",
+      "science                20832 non-null float64\n",
+      "NBA2kTeamUp            20832 non-null float64\n",
+      "EverythingScience      20832 non-null float64\n",
+      "india                  20832 non-null float64\n",
+      "web_design             20832 non-null float64\n",
+      "aww                    20832 non-null float64\n",
+      "DiepioPartyLinks       20832 non-null float64\n",
+      "minnesotavikings       20832 non-null float64\n",
+      "SuicideWatch           20832 non-null float64\n",
+      "askscience             20832 non-null float64\n",
+      "Jokes                  20832 non-null float64\n",
+      "Showerthoughts         20832 non-null float64\n",
+      "europe                 20832 non-null float64\n",
+      "IndianFootball         20832 non-null float64\n",
+      "bangalore              20832 non-null float64\n",
+      "borrow                 20832 non-null float64\n",
+      "Advice                 20832 non-null float64\n",
+      "Louisville             20832 non-null float64\n",
+      "BlackPeopleTwitter     20832 non-null float64\n",
+      "Cumtown                20832 non-null float64\n",
+      "ShittyLifeProTips      20832 non-null float64\n",
+      "GDmaze                 20832 non-null float64\n",
+      "Fireteams              20832 non-null float64\n",
+      "Fantasy_Football       20832 non-null float64\n",
+      "Drugs                  20832 non-null float64\n",
+      "TwoXChromosomes        20832 non-null float64\n",
+      "ukpolitics             20832 non-null float64\n",
+      "Standup                20832 non-null float64\n",
+      "Rainbow6               20832 non-null float64\n",
+      "MMA                    20832 non-null float64\n",
+      "nbaleaguesim2019       20832 non-null float64\n",
+      "news                   20832 non-null float64\n",
+      "dtypes: float64(138)\n",
+      "memory usage: 22.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info(verbose=True,null_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('./data/weighted_db.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for i in onlyfiles:\n",
+    "    temp = pd.read_csv('./data/posters/{}'.format(i))\n",
+    "    temp['og_subreddit'] = re.findall(str_srch,i)[0]\n",
+    "    if df.shape[0] == 0:\n",
+    "        df = temp.copy()\n",
+    "    else:\n",
+    "        df=pd.concat([df,temp])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df.to_csv('./data/final_db.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "df"
    ]
